exports[`actions should create an action to cancel edited changes 1`] = `
Object {
  "payload": Object {
    "fakeID": "fakeID",
  },
  "type": "CANCEL_EDIT",
}
`;

exports[`actions should create an action to delete an account 1`] = `
Object {
  "payload": Object {
    "fakeID": "fakeID",
  },
  "type": "DELETE_ACCOUNT",
}
`;

exports[`actions should create an action to fetch accounts 1`] = `
Object {
  "payload": Object {
    "authToken": "tokenXYZ",
    "genIDFunc": "insert function here",
    "userID": "userID",
  },
  "type": "FETCH_ACCOUNTS",
}
`;

exports[`actions should create an action to handle account changes 1`] = `
Object {
  "payload": Object {
    "fakeID": "fakeID",
    "target": Object {
      "test": "test",
    },
  },
  "type": "CHANGE_ACCOUNT",
}
`;

exports[`actions should create an action to save a new account 1`] = `
Object {
  "payload": Object {
    "EditedAccount": undefined,
    "authToken": undefined,
    "userID": Object {
      "test": "test",
    },
  },
  "type": "SAVE_NEW_ACCOUNT",
}
`;

exports[`actions should create an action to set account to edit mode 1`] = `
Object {
  "payload": Object {
    "data": Object {
      "edit": true,
      "test": "test",
    },
    "fakeID": "fakeID",
  },
  "type": "EDIT_ACCOUNT",
}
`;
